--- a/kadai_015/style.css
+++ b/kadai_015/style.css
@@ -12,12 +12,9 @@ html {
 }
 h1 {
   font-family: "Josefin Sans", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: normal;
   font-size: 2rem;
   letter-spacing: 1.2em;
-  text-shadow: 1px 1px 0.8 gray;
+  text-shadow: 5px 5px 3px gray;
   border-bottom: solid 3px rgb(115,115,114)
 }
 body {
